Implementing reset password functional

--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,15 @@
   "require": {
     "php": "^8.0",
     "ext-json": "*",
+    "ext-pdo": "*",
+    "ext-random": "*",
     "monolog/monolog": "^2.8",
     "php-di/php-di": "^6.4",
+    "phpmailer/phpmailer": "^6.6",
     "slim/psr7": "^1.5",
     "slim/slim": "^4.10",
     "slim/twig-view": "^3.3",
-    "twig/twig": "^3.4",
-    "ext-pdo": "*"
+    "twig/twig": "^3.4"
   },
   "require-dev": {
     "jangregor/phpstan-prophecy": "^1.0.0",
