--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "slim/psr7": "^1.5",
     "slim/slim": "^4.10",
     "slim/twig-view": "^3.3",
-    "twig/twig": "^3.4"
+    "twig/twig": "^3.4",
+    "vlucas/phpdotenv": "^5.5"
   },
   "require-dev": {
     "jangregor/phpstan-prophecy": "^1.0.0",
