Adding table names to .env

--- a/public/.env.example
+++ b/public/.env.example
@@ -3,3 +3,5 @@ SMTP_PASS="securePassFrom2stepAuth"
 DB_HOST="mysql:3306"
 DB_USER="dumko"
 DB_PASS="mysqlpw"
+DB_USERS_TABLE="users"
+DB_ADMIN_TABLE="admin_table"
